<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fahim.shakenchange.SettingsActivity"
    android:background="@color/WHITE">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/imageView7"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="false"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/composition_2" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SHAKE_SWITCH_PROMPT"
        android:id="@+id/sensorSwitch"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/BLACK"
        android:enabled="true"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/textView18"
        android:layout_below="@+id/switchShow"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/FAHIM_GREY_DRAW"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/SEEKBAR_PROMPT"
        android:id="@+id/textView20"
        android:layout_below="@+id/textView18"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/BLACK"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Value: "
        android:id="@+id/textView21"
        android:layout_below="@+id/textView20"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/FAHIM_BLUE"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/valueShow"
        android:layout_below="@+id/textView20"
        android:layout_toRightOf="@+id/textView21"
        android:layout_toEndOf="@+id/textView21"
        android:layout_marginTop="10dp"
        android:textColor="@color/FAHIM_BLUE"
        android:layout_marginLeft="10dp" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sensorSeekBar"
        android:layout_below="@+id/textView21"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:max="5"
        android:progress="3"
        android:indeterminate="false"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Activated"
        android:id="@+id/switchShow"
        android:layout_below="@+id/sensorSwitch"
        android:layout_alignLeft="@+id/textView18"
        android:layout_alignStart="@+id/textView18"
        android:textColor="@color/FAHIM_BLUE"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/textView22"
        android:layout_below="@+id/sensorSeekBar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/FAHIM_GREY_DRAW"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/SHAKE_TEST_PROMPT"
        android:id="@+id/textView23"
        android:layout_below="@+id/textView22"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/BLACK"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp" />

    <TextView
        android:layout_width="70dp"
        android:layout_height="30dp"
        android:id="@+id/testColor"
        android:layout_below="@+id/textView23"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@color/FAHIM_BLUE" />

</RelativeLayout>
